# DiskArray

./: CMakeLists.txt  README.md
.github/workflows/: build_example.yml  cmake.yml
example/: .gitignore  CMakeLists.txt  main.cpp
example/proto/: bigobject.proto
include/DiskArray/: diskarray.hpp  file.hpp  sfinae.hpp
